--- a/src/sass/_mainSite.scss
+++ b/src/sass/_mainSite.scss
@@ -1,85 +1,85 @@
 .search-form {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    background-color: #CDD8D4;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  background-color: #085ecc;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
 }
 
 input {
-    border: 2px solid rgba(27, 31, 35, 0.15);
-    border-radius: 10px;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
-    box-sizing: border-box;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 350;
-    list-style: none;
-    padding: 10px;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
+  box-sizing: border-box;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 500;
+  list-style: none;
+  padding: 10px;
 }
 
 button {
-    background-color: #fafbfc;
-    border: 2px solid rgba(27, 31, 35, 0.15);
-    border-radius: 10px;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 10px;
-    font-weight: 350;
-    list-style: none;
-    padding: 15px 15px;
+  background-color: #fafbfc;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  list-style: none;
+  padding: 15px 15px;
 }
 
 img {
-    display: block;
-    width: 100%;
-    height: 200px;
+  display: block;
+  width: 100%;
+  height: 200px;
 }
 
 .gallery {
-    position: absolute;
-    top: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: -30px;
-    padding-top: 30px;
+  position: absolute;
+  top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: -30px;
+  padding-top: 30px;
 }
 
 .photo-card {
-    margin-right: 30px;
-    margin-top: 30px;
-    flex-basis: calc(100% / 4 - 30px);
+  margin-right: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 4 - 30px);
 
-    &:nth-of-type(4n) {
-        margin-right: 0;
-    }
+  &:nth-of-type(4n) {
+    margin-right: 0;
+  }
 }
 
 .info {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: 1px solid rgba(27, 31, 35, 0.15);
-    border-top: none;
-    border-radius: 0 0 4px 4px;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
 }
 
 .info-item {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 .span-item {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
