--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -73,9 +73,9 @@ button {
   transition: all 500ms;
 }
 
-.photo-card:hover {
-  //transform: scale(1.1);
-}
+//.photo-card:hover {
+//  transform: scale(1.1);
+//}
 
 a {
   margin-top: 20px;
