--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,16 +2,15 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
-  background-color: #b6b6bb;
+  background-color: #2f2f37;
   color: #f9f9fe;
   padding: 15px;
   margin: 0;
 }
-
 .form-wrapper {
   position: fixed;
   z-index: 5;
-  background-color: #b6b6bb;
+  background-color: rgb(77, 66, 107);
   padding: 15px;
   height: 80px;
   top: 0;
@@ -54,7 +53,7 @@ button {
   align-items: center;
   width: 320px;
   margin-left: 20px;
-  border: 1px solid #b6b6bb;
+  border: 1px solid rgb(77, 66, 107);
 }
 
 .info-item {
@@ -73,9 +72,9 @@ button {
   transition: all 500ms;
 }
 
-//.photo-card:hover {
-//  transform: scale(1.1);
-//}
+.photo-card:hover {
+  transform: scale(1.1);
+}
 
 a {
   margin-top: 20px;
@@ -100,7 +99,7 @@ img {
   align-items: center;
   margin: 50px auto 0;
   justify-content: center;
-  background-color: #b6b6bb;
+  background-color: rgb(77, 66, 107);
   border-radius: 5px;
   padding: 10px;
   color: #f9f9fe;
@@ -109,9 +108,9 @@ img {
 }
 
 .load-more:hover {
-  //transform: scale(1.1);
+  transform: scale(1.1);
   background-color: #f9f9fe;
-  color: #b6b6bb;
+  color: rgb(77, 66, 107);
 }
 
 .top-btn {
@@ -120,7 +119,7 @@ img {
   right: 20px;
   bottom: 20px;
   cursor: pointer;
-  //transform: scale(1.8);
+  transform: scale(1.8);
   opacity: 0;
   transition: 500ms;
 }
