--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
-  background-color: #2f2f37;
+  background-color: #b9b9bf;
   color: #f9f9fe;
   padding: 15px;
   margin: 0;
@@ -10,7 +10,7 @@ body {
 .form-wrapper {
   position: fixed;
   z-index: 5;
-  background-color: rgb(77, 66, 107);
+  background-color: #b9b9bf;
   padding: 15px;
   height: 80px;
   top: 0;
@@ -99,7 +99,7 @@ img {
   align-items: center;
   margin: 50px auto 0;
   justify-content: center;
-  background-color: rgb(77, 66, 107);
+  background-color: #b9b9bf;
   border-radius: 5px;
   padding: 10px;
   color: #f9f9fe;
@@ -110,7 +110,7 @@ img {
 .load-more:hover {
   transform: scale(1.1);
   background-color: #f9f9fe;
-  color: rgb(77, 66, 107);
+  color: #b9b9bf;
 }
 
 .top-btn {
