--- a/src/sass/_mainSite.scss
+++ b/src/sass/_mainSite.scss
@@ -8,8 +8,8 @@
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background-color: #085ecc;
-  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
+  background-color: #c43cb2;
+  box-shadow: rgba(235, 69, 210, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0;
 }
 
 input {
@@ -21,7 +21,7 @@ input {
   font-size: 20px;
   font-weight: 500;
   list-style: none;
-  padding: 10px;
+  padding: 5px;
 }
 
 button {
